syntax = "proto3";

option csharp_namespace = "WifeGrpcService";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package greet;

// The greeting service definition.
service WifeGreeter {
  // Sends a greeting
  rpc GetWantedProducts (UserLoginRequest) returns (GetWantedProductsReply);
  rpc GetTotalAmountWantedProducts (UserLoginRequest) returns (GetTotalAmountWantedProductsReply);
  rpc AddWantedProduct (ItemRequest) returns (WantedProductReply);
  rpc GetWantedProductItem (ItemRequest) returns (WantedProductReply);
  rpc RemoveWantedProduct (ItemRequest) returns (BoolReply);
  rpc RemoveAllWantedProducts (UserLoginRequest) returns (BoolReply);
  rpc Health (google.protobuf.Empty) returns (google.protobuf.BoolValue);
}

// The request message 
message UserLoginRequest {
  string UserLogin = 1;
}
message ItemRequest {
  int32 Id =1;
  string UserLogin = 2;
}

// The response message 
message BoolReply {
   bool Successfully = 1;
   bool Element =2;
   string ErrorMessage = 3;
}
message GetTotalAmountWantedProductsReply {
   bool Successfully = 1;
   int32 Element =2;
   string ErrorMessage = 3;
}
message WantedProductReply {
   bool Successfully = 1;
   WantedProductDtoMessage Element =2;
   string ErrorMessage = 3;
}
message GetWantedProductsReply {
   bool Successfully = 1;
   ListOfWantedProductDto Element =2;
   string ErrorMessage = 3;
}


message ListOfWantedProductDto {
    repeated WantedProductDtoMessage wantedProductDtoMessage = 1;
}

message WantedProductDtoMessage {
		int32 Id = 1;
        bool BoughtStatus = 2;
        int32 ProductId = 3;
        int32 WifeId = 4;
}